# Voxlink

./: .gitignore  Cargo.toml  README.md  Update.bat  UpdateAndRun.bat  build.rs  build_and_zip.bat  test_signup.py
.github/workflows/: deploy-web.yml  release.yml
docs/plans/: 2026-06-22-media-and-avatar.md  2026-06-22-media-and-avatar.md.tasks.json  2026-06-27-message-contract.md  2026-06-27-mobile-usability-design.md  2026-06-27-social-layer-phase1-design.md  2026-06-27-social-layer-phase1-implementation.md  2026-06-27-social-layer-phase1-implementation.md.tasks.json  2026-06-28-replies-and-mentions-design.md  2026-06-28-replies-and-mentions-migration.sql  2026-06-28-replies-and-mentions.md  2026-06-28-replies-and-mentions.md.tasks.json
src/: app.rs  main.rs  state.rs
src/audio/: capture.rs  mod.rs  notification.rs  playback.rs
src/net/: contract.rs  mod.rs  signaling.rs  supabase.rs  updater.rs  webrtc.rs
src/ui/: chat.rs  components.rs  image_loader.rs  login.rs  mod.rs  profile.rs  theme.rs  updater.rs
web/: app.js  contract.js  index.html  style.css
